--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 ﻿<!DOCTYPE html>
-<!--
-	Salient by TEMPLATE STOCK
-	templatestock.co @templatestock
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html lang="en">
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rali-Teck</title>
+  <title>RaLi TECH</title>
 
   <!-- Custom Google fonts -->
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300,700' rel='stylesheet' type='text/css'>
@@ -64,7 +58,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-dove" style="color: black;"> </i><span> Rali-Teck</span></a>
+          <a class="navbar-brand" href="#"><i class="fa fa-dove" style="color: black;"> </i><span> RaLi TECH</span></a>
         </div>
         <!-- Collecte des liens de navigation, formulaires et autres contenus -->
         <div class="collapse navbar-collapse" id="navigation-nav">
