--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-dove" style="color: black;"> </i><span>RaLiNova Consulting</span></a>
+          <a class="navbar-brand" href="#"><span><img src="ralinova.png" alt="" style="width: 50px;"></span> <span> RaliNova Consulting</span></a>
         </div>
         <!-- Collecte des liens de navigation, formulaires et autres contenus -->
         <div class="collapse navbar-collapse" id="navigation-nav">
